samples/_failures_safe/1761040428_da6ee4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ce3afd98.c: In function ‘main’:
./samples/SAFE/__tmp_ce3afd98.c:131:5: error: expected expression at end of input
  131 |     if (fgets((char*)input_data, sizeof(input_data), stdin) ==
      |     ^~
./samples/SAFE/__tmp_ce3afd98.c:131:5: error: expected declaration or statement at end of input
